clash/nodeport-clash-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: class-all-np
  namespace: clash
spec:
  type: NodePort
  selector:
    application: clash
    component: clash-all
  ports:
    - port: 7890
      targetPort: 7890
      nodePort: 31890
