clash/nodeport-clash-us.yaml
apiVersion: v1
kind: Service
metadata:
  name: class-us-np
  namespace: clash
spec:
  type: NodePort
  selector:
    application: clash
    component: clash-us
  ports:
    - port: 7890
      targetPort: 7890
      nodePort: 31891
