clash/service-clash-us.yaml
apiVersion: v1
kind: Service
metadata:
  name: clash-us
  namespace: clash
spec:
  type: ClusterIP
  ports:
    - name: clash-us
      port: 7890
      targetPort: 7890
      protocol: TCP
  selector:
    application: clash
    component: clash-us
