clash/service-clash.yaml
apiVersion: v1
kind: Service
metadata:
  name: clash
  namespace: clash
spec:
  type: ClusterIP
  ports:
    - name: clash
      port: 7890
      targetPort: 7890
      protocol: TCP
  selector:
    application: clash
    component: clash
